--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -2,7 +2,7 @@
 [[category:Bisé]]
 
 === A ===
-[[Aljeria]] - [[Alémani]] - [[Al Mamlaká al-Maghribiya]] (Maroc) - [[Libîya]] - [[Angóla]]
+[[Afganistani]] - [[Aljeria]] - [[Alémani]] - [[Al Mamlaká al-Maghribiya]] (Maroc) - [[Angóla]]
 
 === B ===
 [[Bê Afríka]] ([[Santrafríka]]) - [[Bɛ́lɛjika]] - [[Bénin]] - [[Botswana]] - [[Burkina Faso]] - [[Burundi]]
