--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -37,6 +37,10 @@
 === N ===
 [[Namibia]] - [[Niger]] - [[Nijeria]]
 
+=== O ===
+
+[[Omani]] - [[Ostralía]] - [[Otrishi]]
+
 === P ===
 [[Pulutugal]]
 
