--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -17,7 +17,7 @@
 [[Falansia]]
 
 === G ===
-[[Gabon]] - [[Gambia]] - [[Ghana]] - [[Gine]] - [[Gine-Bisau]] - [[Gine-Ekwatorial]] (Mambénga)
+[[Gabon]] - [[Gambia]] - [[Ghana]] - [[Gine]] - [[Gine-Bisau]] - [[Gine-Ekwatoliáli]] (Mambénga)
 
 === H ===
 [[Holanda]] (Bikolo ya Sé)
