--- a/Opozision.mw
+++ b/Opozision.mw
@@ -1,3 +1,3 @@
-'''Opozision''' ebengami bato mpe [[parti|baparti]] oyo bamipesi na mosala ya bokambi ekolo - to mpe '''[[politiki]]''', kasi bazali na '''[[kimokonzi]]''' te. Bato mpe baparti ya opozision babengami mpe bongo, po bakeseni na makanisi mpe na politiki na (ba)parti oyo ezali na kimokonzi. Likókí ekutanaka mingi koleka na bikolo oyo bazali - to bazali koluka kozala - na '''[[demokrasi]]'''.
+'''Opozision''' ebengami bato mpe [[parti|baparti]] oyo bamipesi na mosala ya bokambi ekolo - to mpe '''[[politiki]]''', kasi bazali na '''[[kimokonzi]]''' te. Bato mpe baparti ya opozision babengami mpe bongo, po bakeseni na makanisi mpe na politiki na (ba)parti oyo ezali na kimokonzi. '''[[Likókí]]''' ya kozala na opozision okati ya misala ya bulamatari, ekutanaka mingi koleka na bikolo oyo bazali - to bazali koluka kozala - na '''[[demokrasi]]'''.
 
 {{ndambo}}
