*Empty MediaWiki Message*

--- a/Demokrasi.mw
+++ b/Demokrasi.mw
@@ -1,7 +1,7 @@
 [[category:lisangá]]
 {{ndambo}}
 
-'''Demokrasi''' liuti na maloba mabale ma [[kigresi]]i : ''demos'' elingi koloba bana ba ekolo; mpe ''kratos'' elingi koloba bokonzi. Demokrasi elingi bongo koloba bokonzi o maboko o [[bana mboka]] mpe mpo ya bolamu ya bango.
+'''Demokrasi''' liuti na maloba mabale ma [[kigresi]] : ''demos'' elingi koloba bana ba ekolo; mpe ''kratos'' elingi koloba bokonzi. Demokrasi elingi bongo koloba bokonzi o maboko o [[bana mboka]] mpe mpo ya bolamu ya bango.
 
 Baye bazali na bokonzi bazui bwango na maboko ma bato ba ekolo, mpe bokonzi bwango bozali mobimba o maboko ma moto moko to mwa [[liboka|liboke]] lya bato te.
 
