--- a/Alémani_(bokokani).mw
+++ b/Alémani_(bokokani).mw
@@ -1,6 +1,1 @@
-'''Alemani''' ezali [[lokótá]] na bato ya [[Alémani]]. Elobamí o na eténi ya [[Bɛ́lɛjika]], [[Swisi]] na [[Afríka]] ([[Namibia]]).
-
-[[Category:Lokótá]]
-
-[[als:Deutsche Sprache]]
-[[de:Deutsche Sprache]]
+#REDIRECT:[[Kialemani]]
