*Empty MediaWiki Message*

--- a/Ekwatéli.mw
+++ b/Ekwatéli.mw
@@ -2,7 +2,7 @@ Ekwatéli ezali nkombo elakisi biloko mingi:
 
 '''-[[Repubiliki ya Ekwatéli]]''' ezali ekolo to mpe esé ya Amerika latina.
 
-'''-[[Ekwatéli (provinsi)|Provinsi ya Ekwatéli]]''' ezali eteni mokonzi to mpe provinsi ya [[Kɛ́ngɛ-Kinshasa]].
+'''-[[Ekwatéli (provinsi)|Provinsi ya Ekwatéli]]''' ezali eteni mokonzi to mpe provinsi ya [[Kɔ́ngɔ-Kinshasa]].
 
 '''-[[Ekwatéli (provinsi-GE)|Provinsi ya Ekwatéli]]''' ezali eteni mokonzi to mpe provinsi ya [[Gine-Ekwatoliáli]].
 
