*Empty MediaWiki Message*

--- a/Ekwatéli.mw
+++ b/Ekwatéli.mw
@@ -1,11 +1,11 @@
 Ekwatéli ezali nkombo elakisi biloko mingi:
 
-'''-[[Repubiliki ya Ekwatéli]]''' ezali ekolo to mpe esé ya Amerika latina.
+'''-[[Repubiliki ya Ekwatéli]]''' ezali ekolo to mpe esé ya '''[[Amerika latina]]'''.
 
-'''-[[Ekwatéli (provinsi)|Provinsi ya Ekwatéli]]''' ezali eteni mokonzi to mpe provinsi ya [[Kɔ́ngɔ-Kinshasa]].
+'''-[[Ekwatéli (provinsi)|Provinsi ya Ekwatéli]]''' ezali eteni mokonzi to mpe provinsi ya '''[[Kɔ́ngɔ-Kinshasa]]'''.
 
-'''-[[Ekwatéli (provinsi-GE)|Provinsi ya Ekwatéli]]''' ezali eteni mokonzi to mpe provinsi ya [[Gine-Ekwatoliáli]].
+'''-[[Ekwatéli (provinsi-GE)|Provinsi ya Ekwatéli]]''' ezali eteni mokonzi to mpe provinsi ya '''[[Gine-Ekwatoliáli]]'''.
 
-'''-[[Ekwatéli (mokili)|Ekwatéli]]''' ezali eloko oyo bato bakelaki pona kokata mokili o bakarta ya jyografi, na biteni mibale, moko o likolo to mpe na Nor, moko na se to mpe na Sud. Ekolo Ekwatéli, mpe baprovinsi ya Ekwateli ya bikolo mingi na mokili, bazali na nkombo wana mpo ba kutanemi esika [[Ekwatéli (mokili)|ekwatéli]] elekí na karta ya mokili.
+'''-[[Ekwatéli (mokili)|Ekwatéli]]''' ezali eloko oyo bato bakelaki pona kokata mokili o bakarta ya jyografi, na biteni mibale, moko o likolo to mpe na Nor, moko na se to mpe na Sud. '''Ekolo Ekwatéli''', mpe baprovinsi ya Ekwateli ya bikolo mingi na mokili, bazali na nkombo wana mpo ba kutanemi esika '''[[Ekwatéli (mokili)|ekwatéli]]''' elekí na karta ya mokili.
 
 {{Bokokani}}
