*Empty MediaWiki Message*

--- a/Joseph_Kabila.mw
+++ b/Joseph_Kabila.mw
@@ -1,5 +1,5 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
-[en:Joseph Kabila]][[fr:Joseph Kabila]][[es:Joseph Kabila]][[kg:Joseph Kabila]][[sw:Joseph Kabila]]
+[[en:Joseph Kabila]][[fr:Joseph Kabila]][[es:Joseph Kabila]][[kg:Joseph Kabila]][[sw:Joseph Kabila]]
 {{ndambo}}
 [[Image:Joseph_kabila2.jpg|270px|thumb|Joseph Kabila]]
 
