--- a/Boklísto.mw
+++ b/Boklísto.mw
@@ -1,3 +1,5 @@
 {{KimokristoS}}
 
 '''Kimokristo''' (na [[lifalansé]] balobi ''[[:fr:Chistianisme|Chistianisme]]'') ezali relijion ya balandi Yesu ya Nazaleti. Relijion oyo ezui nkombo na yango, na nkombo ya moyángeli na yango ya liboso - Yesu - oyo ayebani mpe na nkombo ya '''mobikisi''', to mpe '''''Kristo''''' na [[kigresi]] (lokótá la [[Gresi]]).  Kimokristo ezali mpe relijion moko okati ya barelijion misatu ya '''[[balandi nzambe moko]]'''.  ('''[[Kimokristo]]''', '''[[Islamu]]''' na '''[[Kimoyuda]]'''. Lokola okati ya barelijion basusu babale, [[mokristo|bakristo]] basambelaka nzambe oyo bato-mayele babengi '''Nzambe ya Abalamu''' (''Abraham'').
+
+[[fr:Christianisme]][[en:Christianity]]
