/* Ba Provinsi bya Kɔ́ngɔ Kinshasa */

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -133,15 +133,15 @@ Actuellement l'armée française maintient la présence de militaires français 
 
 <br clear=all />
 
-== Ba Provinsi bya Kɔ́ngɔ Kinshasa ==
+== Bituka bya Kɔ́ngɔ-Kinshasa ==
 [[Image:DCongoNumbered.png|thumb|300px|right]]
-''Ekakoli ya molayi : [[Ba Provinsi bya Kɔ́ngɔ Kinshasa]]''
+''Ekakoli ya molayi : [[Bituka bya Kɔ́ngɔ-Kinshasa]]''
 
-Biteni mikonzi bya Kɔ́ngɔ Kinshasa mibengami [[Provinsi]]. Ba provinsi ya Kɔ́ngɔ Kinshasa bazali:
+Biteni mikonzi bya Kɔ́ngɔ-Kinshasa mibengami [[Bituka]] (''Provinces'' na [[lifalansé]]). Bituka ya Kɔ́ngɔ-Kinshasa bazali:
 
 # [[Bandundu]]
 # [[Bas-Congo]]
-# [[Ekwatéli (provinsi)|Ekwatéli]]
+# [[Ekwatéli (etuka)|Ekwatéli]]
 # [[Kasaï-Occidental]]
 # [[Kasaï-Oriental]]
 # [[Katanga]]
