/* Bituka bya Kɔ́ngɔ-Kinshasa */

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -137,7 +137,7 @@ Actuellement l'armée française maintient la présence de militaires français 
 [[Image:DCongoNumbered.png|thumb|300px|right]]
 ''Ekakoli ya molayi : [[Bituka bya Kɔ́ngɔ-Kinshasa]]''
 
-Biteni mikonzi bya Kɔ́ngɔ-Kinshasa mibengami [[Bituka]] (''Provinces'' na [[lifalansé]]). Bituka ya Kɔ́ngɔ-Kinshasa bazali:
+Biteni mikonzi bya Kɔ́ngɔ-Kinshasa mibengami [[Etuka|Bituka]] (''Provinces'' na [[lifalansé]]). Bituka ya Kɔ́ngɔ-Kinshasa bazali:
 
 # [[Bandundu]]
 # [[Bas-Congo]]
