--- a/Ekwatéli.mw
+++ b/Ekwatéli.mw
@@ -2,10 +2,10 @@ Ekwatéli ezali nkombo elakisi biloko mingi:
 
 '''-[[Repubiliki ya Ekwatéli]]''' ezali ekolo to mpe esé ya '''[[Amerika latina]]'''.
 
-'''-[[Ekwatéli (provinsi)|Provinsi ya Ekwatéli]]''' ezali eteni mokonzi to mpe provinsi ya '''[[Kɔ́ngɔ-Kinshasa]]'''.
+'''-[[Ekwatéli (etuka)|Etuka ya Ekwatéli]]''' ezali [[etuka]] to mpe [[etuka|provinsi]] ya '''[[Kɔ́ngɔ-Kinshasa]]'''.
 
-'''-[[Ekwatéli (provinsi-GE)|Provinsi ya Ekwatéli]]''' ezali eteni mokonzi to mpe provinsi ya '''[[Gine-Ekwatoliáli]]'''.
+'''-[[Ekwatéli (etuka-GE)|Etuka ya Ekwatéli]]''' ezali [[etuka]] to mpe [[etuka|provinsi]] ya '''[[Gine-Ekwatoliáli]]'''.
 
-'''-[[Ekwatéli (mokili)|Ekwatéli]]''' ezali eloko oyo bato bakelaki pona kokata mokili o bakarta ya jyografi, na biteni mibale, moko o likolo to mpe na Nor, moko na se to mpe na Sud. '''Ekolo Ekwatéli''', mpe baprovinsi ya Ekwateli ya bikolo mingi na mokili, bazali na nkombo wana mpo ba kutanemi esika '''[[Ekwatéli (mokili)|ekwatéli]]''' elekí na karta ya mokili.
+'''-[[Ekwatéli (mokili)|Ekwatéli]]''' ezali eloko oyo bato bakelaki pona kokata mokili o bakarta ya jyografi, na biteni mibale, moko o likolo to mpe na Nor, moko na se to mpe na Sud. '''Ekolo Ekwatéli''', mpe bituka ya Ekwateli ya bikolo mingi na mokili, bazali na nkombo wana mpo ba kutanemi esika '''[[Ekwatéli (mokili)|ekwatéli]]''' elekí na karta ya mokili.
 
 {{Bokokani}}
