--- a/Kasai_ya_Monyɛlɛ.mw
+++ b/Kasai_ya_Monyɛlɛ.mw
@@ -1,3 +1,2 @@
 {{BiteniKongoKinshasa}}
-[[Category:Bingumba bya Repubiliki ya Kɔ́ngɔ Demokratiki]]
-[[Category:Ba provinsi bya Repubiliki ya Kɔ́ngɔ Demokratiki]]
+[[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
