--- a/Bas-Congo.mw
+++ b/Bas-Congo.mw
@@ -1,3 +1,3 @@
 {{BiteniKongoKinshasa}}
-[[Category:Repubiliki ya Kɔ́ngɔ Demokratiki]]
-[[Category:Ba provinsi bya Repubiliki ya Kɔ́ngɔ Demokratiki]]
+[[Category:Kɔ́ngɔ-Kinshasa]]
+[[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
