--- a/Katanga.mw
+++ b/Katanga.mw
@@ -1,3 +1,3 @@
 {{BiteniKongoKinshasa}}
-[[Category:Bingumba bya Repubiliki ya Kɔ́ngɔ Demokratiki]]
-[[Category:Ba provinsi bya Repubiliki ya Kɔ́ngɔ Demokratiki]]
+[[Category:Kɔ́ngɔ-Kinshasa]]
+[[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
