--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -32,8 +32,9 @@ Kinshasa is home to a large number of radio and TV stations. The National TV is 
 *[[Repubiliki ya Kɔ́ngɔ Demokratiki]]
 
 [[Category:Bingumba mikonzi ya Afrika]]
-[[Category:Bingumba bya Repubiliki ya Kɔ́ngɔ Demokratiki]]
-[[Category:Ba provinsi bya Repubiliki ya Kɔ́ngɔ Demokratiki]]
+[[Category:Kɔ́ngɔ-Kinshasa]]
+[[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
+[[Category:Bingumba bya Kɔ́ngɔ-Kinshasa]]
 
 [[de:Kinshasa]]
 [[es:Kinshasa]]
