/* Etando mpe Batu */

--- a/Bitúká_bya_Kongó-Kinsásá.mw
+++ b/Bitúká_bya_Kongó-Kinsásá.mw
@@ -22,37 +22,37 @@ Biteni mikonzi bya [[Kɔ́ngɔ-Kinshasa]] mibengami [[Bituka]] (''Province'' na 
 <b>Nkombo ya Etuka</b></td><td><b>Engumba Mokonzi na Etuka</b></td><td><b>Superficie</b></td><td><b>Batu</b><br> (est. 1994)</td><td><b>Batu</b><br> (est. 1998)
 </td></tr>
 <tr><td>
-Provinsi ya [[Bandundu]]</td><td>[[Bandundu]] </td><td> 295,658 </td><td> 4,907,673</td><td>  5,201,000 
+Etuka ya [[Bandundu]]</td><td>[[Bandundu]] </td><td> 295,658 </td><td> 4,907,673</td><td>  5,201,000 
 </td></tr>
 <tr><td>
-Provinsi ya [[Bas-Congo]]</td><td>[[Matadi]]</td><td>  53,920 </td><td> 2,578,299 </td><td> 2,835,000 
+Etuka ya [[Bas-Congo]]</td><td>[[Matadi]]</td><td>  53,920 </td><td> 2,578,299 </td><td> 2,835,000 
 </td></tr>
 <tr><td>
-Provinsi ya [[Ekwatéli (etuka)|Ekwatéli]]</td><td>[[Mbandaka]]</td><td> 403,292 </td><td> 4,789,307 </td><td> 4,820,000 
+Etuka ya [[Ekwatéli (etuka)|Ekwatéli]]</td><td>[[Mbandaka]]</td><td> 403,292 </td><td> 4,789,307 </td><td> 4,820,000 
 </td></tr>
 <tr><td>
-Provinsi ya [[Kasaï-Occidental]]</td><td>[[Kananga]]</td><td> 154,742 </td><td> 3,117,305 </td><td> 3,337,000 
+Etuka ya [[Kasaï-Occidental]]</td><td>[[Kananga]]</td><td> 154,742 </td><td> 3,117,305 </td><td> 3,337,000 
 </td></tr>
 <tr><td>
-Provinsi ya [[Kasaï-Oriental]]</td><td>[[Mbuji-Mayi]]</td><td> 170,302 </td><td> 3,778,151 </td><td> 3,830,000 
+Etuka ya [[Kasaï-Oriental]]</td><td>[[Mbuji-Mayi]]</td><td> 170,302 </td><td> 3,778,151 </td><td> 3,830,000 
 </td></tr>
 <tr><td>
-Provinsi ya [[Katanga]]</td><td>[[Lubumbashi]]</td><td> 496,877 </td><td> 5,602,178 </td><td> 4,125,000 
+Etuka ya [[Katanga]]</td><td>[[Lubumbashi]]</td><td> 496,877 </td><td> 5,602,178 </td><td> 4,125,000 
 </td></tr>
 <tr><td>
 Engumba [[Kinshasa]]</td><td>[[Kinshasa]]</td><td> 9,965 </td><td> 4,657,061 </td><td> 4,787,000 
 </td></tr>
 <tr><td>
-Provinsi ya [[Maniema]]</td><td>[[Kindu]]</td><td> 132,250 </td><td> 1,048,000 </td><td> 1,246,787 
+Etuka ya [[Maniema]]</td><td>[[Kindu]]</td><td> 132,250 </td><td> 1,048,000 </td><td> 1,246,787 
 </td></tr>
 <tr><td>
-Provinsi ya [[Nord-Kivu]]</td><td>[[Goma]]</td><td> 59,483 </td><td> 3,546,000 </td><td> 3,564,434 
+Etuka ya [[Nord-Kivu]]</td><td>[[Goma]]</td><td> 59,483 </td><td> 3,546,000 </td><td> 3,564,434 
 </td></tr>
 <tr><td>
-Provinsi [[Orientale]]</td><td>[[Kisangani]]</td><td> 503,239 </td><td> 5,426,715 </td><td> 5,566,000 
+Etuka [[Orientale]]</td><td>[[Kisangani]]</td><td> 503,239 </td><td> 5,426,715 </td><td> 5,566,000 
 </td></tr>
 <tr><td>
-Provinsi ya [[Sud-Kivu]]</td><td>[[Bukavu]]</td><td> 65,070 </td><td> 3,093,000 </td><td> 2,837,779 
+Etuka ya [[Sud-Kivu]]</td><td>[[Bukavu]]</td><td> 65,070 </td><td> 3,093,000 </td><td> 2,837,779 
 </td></tr>
 <tr><td>
 <b>Total</b></td><td></td></td><td><b>2,344,798</b></td><td><b>42,545,000</b></td><td><b>42,150,000</b> 
