/* Etando mpe Batu */

--- a/Bitúká_bya_Kongó-Kinsásá.mw
+++ b/Bitúká_bya_Kongó-Kinsásá.mw
@@ -61,7 +61,7 @@ Etuka ya [[Sud-Kivu]]</td><td>[[Bukavu]]</td><td> 65,070 </td><td> 3,093,000 </t
 ''Source :'' [http://www.congonline.com/geo/rgions.htm Congo Online] (na lifalansa)
 
 
-Okati o búku ya mibeko-mokonzi bya Kɔ́ngɔ-Kinshasa, oyo eponámáki na bakomi mibeko to mpe "Parlement", ekomámí ete nako banda mbula 2008, ekolo Kɔ́ngɔ-Kinshasa eko katakatama na ba provinsi 26.
+Okati o búku ya mibeko-mokonzi bya Kɔ́ngɔ-Kinshasa, oyo eponámáki na bakomi mibeko to mpe "Parlement", ekomámí ete nako banda mbula 2008, ekolo Kɔ́ngɔ-Kinshasa eko katakatama na ba bituka 26.
 
 ==Tala mpe==
 ===Makasa okati Wiki===
