*Empty MediaWiki Message*

--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -1,17 +1,17 @@
 <div style="float:right">[[image:DCongoKinshasa.png]]</div>
 
-Engumba '''Kinshasa''' - ekoki kotangemene ''Kisásá'' to mpe ''Kínshàsa'' - (oyo eyebenaki kala o nkombo [[Leopoldville]]) ezali [[Engumba mokonzi]] ya [[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kongo Demokratiki]]. Ezali mpe [[etuka|provinsi]] ya ekolo ena. Ezali engumba monene, na milioni 8 ya batu (est.). Elongo na nionso oyo, Kinshasa ezali engumba mibale na bingumba nionso ya molongo, na elobeli [[lifalansé]], na sima ya Engumba [[Pari]] ([[Falansia]]), mpe ezali okati ya bingumba minene koleka ya Afrika o sé ya Sahara. 
+Engumba '''Kinshasa''' - ekoki kotangemene ''Kisásá'' to mpe ''Kínshàsa'' - (oyo eyebenaki kala o nkombo '''[[Leopoldville]]''') ezali '''[[Engumba mokonzi]]''' ya '''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kongo Demokratiki]]''' to mpe '''[[Kɔ́ngɔ-Kinshasa]]'''. Ezali mpe [[etuka|provinsi]] ya ekolo ena. Ezali engumba monene, na milioni 8 ya batu (est.). Elongo na nionso oyo, Kinshasa ezali engumba mibale na bingumba nionso ya mokili, na elobeli [[lifalansé]], na sima ya Engumba '''[[Pari]]''' ([[Falansia]]), mpe ezali okati ya bingumba minene koleka ya [[Afrika]] o sé ya [[Sahara]]. 
 
 ==Jyografi==
 [[Image:Kinshasa.jpg|thumb|290px|Esika ya bapark ya bulevale ya 30 Juni, Kinshasa, Kongo, Avrili 2003]]
 
 Kinshasa is a city of sharp contrasts, with posh residential and commercial areas, two universities, and sprawling slums coexisting side by side. 
 
-It is located along the southern bank of the [[Congo River]], directly opposite the city of [[Brazzaville]], capital of the [[Republic of the Congo]]. Kinshasa is located at 4&deg;16' South, 15&deg;17' East (-4.2667, 15.28333).
+Ekútání na mabele o loboko-ya-mwasi ya Ebale ya [[Kɔ́ngɔ (ebale)|Kɔ́ngɔ]]. Na yango etalani pene-pene mpeza na [Brazzaville]], [[engumba-mokonzi]] ya [[Repubiliki ya Kɔ́ngɔ]] to mpe Kɔ́ngɔ-Brazzaville. Kinshasa ekútání na 4&deg;16' Sud, 15&deg;17' Este (-4.2667, 15.28333).
 
-Major areas of the city include the [[Cité de l'OUA]], home to the [[Government of the Democratic Republic of Congo]], [[Zone de Matonge]], known internationally for its [[nightlife]], and the residential area of [[Gombe]].  The city has a major [[river port]] at [[Beach Ngobila]] with [[ferry|ferries]] to Brazzaville and [[Bangui]], a [[railway]] to [[Matadi]] and [[N'Djili Airport]].
+Bisika minene ya ena engumba: [[Cité de l'OUA]], ndaku ya [[Bulamatari ya Kɔ́ngɔ-Kinshasa]]; [[Komini ya Matonge]], oyo eyebani mokili mobimba pona [[malɛki-butu]] na yango; [[komini ya Gombe]].  Engumba oyo ezali na ba buatu ya ebale to mpe [[ferry|baferry]] na [[port]] ya [[Beach Ngobila]] mpo na kokende Brazzaville na [[Bangui]], na [[nzela-masinu]] tɛ́ na [[Matadi]], elongo na [[Aleopori ya N'Djili|Aleopori]] ya [[N'djili]].
 
-Notable features of the city include the [[SOZACOM Building]] and [[Hotel Memling]] [[skyscraper]]s, the central [[market]], the [[Kinshasa Museum]] and the [[Kinshasa Fine Arts Academy]].  The [[Boulevard du 30 Juin]] links the areas of the city together.
+Biloko minene oyo emonanaka mingi ezali [[Buludingi ya SOZACOM]], Hotel Inter-Continental na [[Hotel Memling]], [[Zando monene]] ya Kinshasa, [[Mizé ya Kinshasa]] na [[Académie des Beaux-Arts]].  [[Bulevale ya 30 Juin]] nde ekangasi biteni nionso ya ena engumba.
 
 ==Historia==
 The city was founded as a trading post by [[Henry Morton Stanley]] in [[1881]] and named Léopoldville in honor of King [[Leopold II of Belgium|Léopold II of Belgium]], who ruled the vast territory that is now the Democratic Republic of the Congo. The post flourished as the first navigable port along the Congo River above [[Livingstone Falls]]: at first, all goods arriving at Léopoldville from the interior would have to be carried by porter to the port of [[Matadi]] along the coast. The completion of a railroad in [[1898]] provided a viable means of transportation along the river's lower reaches and sparked the rapid development of Léopoldville. By 1920, the city was elevated to capital of the Belgian Congo, replacing the seaside town of [[Boma]].
