--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -3,15 +3,15 @@
 Engumba '''Kinshasa''' - ekoki kotangemene ''Kisásá'' to mpe ''Kínshàsa'' - (oyo eyebenaki kala o nkombo '''[[Leopoldville]]''') ezali '''[[Engumba mokonzi]]''' ya '''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kongo Demokratiki]]''' to mpe '''[[Kɔ́ngɔ-Kinshasa]]'''. Ezali mpe [[etuka|provinsi]] ya ekolo ena. Ezali engumba monene, na milioni 8 ya batu (est.). Elongo na nionso oyo, Kinshasa ezali engumba mibale na bingumba nionso ya mokili, na elobeli [[lifalansé]], na sima ya Engumba '''[[Pari]]''' ([[Falansia]]), mpe ezali okati ya bingumba minene koleka ya [[Afrika]] o sé ya [[Sahara]]. 
 
 ==Jyografi==
-[[Image:Kinshasa.jpg|thumb|290px|Esika ya bapark ya bulevale ya 30 Juni, Kinshasa, Kongo, Avrili 2003]]
+[[Image:Kinshasa.jpg|thumb|290px|Esika ya bapark ya bulevale ya 30 Yuni, Kinshasa, Kongo, Avrili 2003]]
 
 Kinshasa is a city of sharp contrasts, with posh residential and commercial areas, two universities, and sprawling slums coexisting side by side. 
 
-Ekútání na mabele o loboko-ya-mwasi ya Ebale ya [[Kɔ́ngɔ (ebale)|Kɔ́ngɔ]]. Na yango etalani pene-pene mpeza na [Brazzaville]], [[engumba-mokonzi]] ya [[Repubiliki ya Kɔ́ngɔ]] to mpe Kɔ́ngɔ-Brazzaville. Kinshasa ekútání na 4&deg;16' Sud, 15&deg;17' Este (-4.2667, 15.28333).
+Ekútání na mabele o loboko-ya-mwasi ya '''Ebale ya [[Kɔ́ngɔ (ebale)|Kɔ́ngɔ]]'''. Na yango etalani pene-pene mpeza na '''[[Brazzaville]]''', [[Engumba-mokonzi|engumba-mokonzi]] ya '''[[Repubiliki ya Kɔ́ngɔ]]''' to mpe '''[[Kɔ́ngɔ-Brazzaville]]'''. Kinshasa ekútání na 4&deg;16' Sud, 15&deg;17' Este (-4.2667, 15.28333).
 
-Bisika minene ya ena engumba: [[Cité de l'OUA]], ndaku ya [[Bulamatari ya Kɔ́ngɔ-Kinshasa]]; [[Komini ya Matonge]], oyo eyebani mokili mobimba pona [[malɛki-butu]] na yango; [[komini ya Gombe]].  Engumba oyo ezali na ba buatu ya ebale to mpe [[ferry|baferry]] na [[port]] ya [[Beach Ngobila]] mpo na kokende Brazzaville na [[Bangui]], na [[nzela-masinu]] tɛ́ na [[Matadi]], elongo na [[Aleopori ya N'Djili|Aleopori]] ya [[N'djili]].
+Bisika minene ya ena engumba: [[Cité de l'OUA]], ndaku ya '''[[Bulamatari ya Kɔ́ngɔ-Kinshasa]]'''; [[Komini ya Matonge]], oyo eyebani mokili mobimba pona [[malɛki-butu]] na yango; [[komini ya Gombe]].  Engumba oyo ezali na ba buatu ya ebale to mpe [[ferry|baferry]] na [[port]] ya [[Beach Ngobila]] mpo na kokende Brazzaville na [[Bangui]], na [[nzela-masinu]] tɛ́ na [[Matadi]], elongo na [[Aleopori ya N'Djili|Aleopori]] ya [[N'djili]].
 
-Biloko minene oyo emonanaka mingi ezali [[Buludingi ya SOZACOM]], Hotel Inter-Continental na [[Hotel Memling]], [[Zando monene]] ya Kinshasa, [[Mizé ya Kinshasa]] na [[Académie des Beaux-Arts]].  [[Bulevale ya 30 Juin]] nde ekangasi biteni nionso ya ena engumba.
+Biloko minene oyo emonanaka mingi ezali [[Buludingi ya SOZACOM]], Hotel Inter-Continental na [[Hotel Memling]], [[Zando monene]] ya Kinshasa, '''[[Mizé ya Kinshasa]]''' na [[Académie des Beaux-Arts]].  [[Bulevale ya 30 Juin]] nde ekangasi biteni nionso ya ena engumba.
 
 ==Historia==
 The city was founded as a trading post by [[Henry Morton Stanley]] in [[1881]] and named Léopoldville in honor of King [[Leopold II of Belgium|Léopold II of Belgium]], who ruled the vast territory that is now the Democratic Republic of the Congo. The post flourished as the first navigable port along the Congo River above [[Livingstone Falls]]: at first, all goods arriving at Léopoldville from the interior would have to be carried by porter to the port of [[Matadi]] along the coast. The completion of a railroad in [[1898]] provided a viable means of transportation along the river's lower reaches and sparked the rapid development of Léopoldville. By 1920, the city was elevated to capital of the Belgian Congo, replacing the seaside town of [[Boma]].
