--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -59,3 +59,4 @@ Kinshasa is home to a large number of radio and TV stations. The National TV is 
 
 {{ndambo}}
 {{BiteniKongoKinshasa}}
+{{CommunesKinshasa}}
