*Empty MediaWiki Message*

--- a/Bandalúngwa.mw
+++ b/Bandalúngwa.mw
@@ -4,7 +4,7 @@ Il est séparé des quartiers habités, dont le quartier très animé du « ''Bl
 ==Tala mpe==
 
 ===Mankasa okati Wikipedia===
-*[[Liste des communes de Kinshasa]]
+*[[Molongo ya ba komini ya Kinshasa]]
 
 ===Mankasa olibanda Wikipedia===
 * [http://www.aedev.org/bandalungwa/ Site officiel de la commune]
