*Empty MediaWiki Message*

--- a/Molɔngɔ́_mwa_komíni_ya_Kinsásá.mw
+++ b/Molɔngɔ́_mwa_komíni_ya_Kinsásá.mw
@@ -1,4 +1,4 @@
-Article principal : ville de [[Kinshasa]] en [[République démocratique du Congo]]
+Ekakoli monene : Engumba [[Kinshasa]] o [[Repubiliki ya Kɔ́ngɔ Demokratiki]]
 
 ==Ba Komini 24 ya Kinshasa==
 
