/* Mankasa olibanda Wikipedia */

--- a/Gombe_(Kinsásá).mw
+++ b/Gombe_(Kinsásá).mw
@@ -16,7 +16,7 @@ Commune résidentielle et arborée située face à [[Brazzaville]], elle abrite 
 
 Sites de quelques institutions établie à Gombe
 
-*[http://www.presidentrdc.cd/ Mokambi-ekolo Kɔ́ngɔ-Kinhasa]
+*[http://www.presidentrdc.cd/ Mokambi-ekolo Kɔ́ngɔ-Kinshasa]
 *[http://www.bcc.cd/ Banque Centrale du Congo]
 *[http://www.fec.cd/ Fédération des Entreprises du Congo]
 *[http://kinshasa.usembassy.gov/ Embassade des Étas-Unis d'Amérique en RD Congo]
