/* Mankasa olibanda Wikipedia */

--- a/Gombe_(Kinsásá).mw
+++ b/Gombe_(Kinsásá).mw
@@ -24,6 +24,6 @@ Sites de quelques institutions établie à Gombe
 *[http://www.monuc.org Monuc]
 *[http://www.golfclubkinshasa.cd/ Golf Club de Kinshasa]
 
-[[Catégorie:Ba Komini ya Kinshasa]]
+[[Category:Ba Komini ya Kinshasa]]
 
 {{CommunesKinshasa}}
