--- a/Gombe_(Kinsásá).mw
+++ b/Gombe_(Kinsásá).mw
@@ -19,7 +19,7 @@ Sites de quelques institutions établie à Gombe
 *[http://www.presidentrdc.cd/ Mokambi-ekolo Kɔ́ngɔ-Kinshasa]
 *[http://www.bcc.cd/ Banque Centrale du Congo]
 *[http://www.fec.cd/ Fédération des Entreprises du Congo]
-*[http://kinshasa.usembassy.gov/ Embassade des Étas-Unis d'Amérique en RD Congo]
+*[http://kinshasa.usembassy.gov/ Ambassade des Étas-Unis d'Amérique en RD Congo]
 *[http://www.cenco.cd/ Conférence Épiscopale Nationale du Congo]
 *[http://www.monuc.org Monuc]
 *[http://www.golfclubkinshasa.cd/ Golf Club de Kinshasa]
