--- a/Ngaliéma.mw
+++ b/Ngaliéma.mw
@@ -8,8 +8,8 @@
 La commune accueille par ailleurs le [[palais de Marbre]], ancienne résidence principale de [[Mobutu Sese Seko]], et le camp militaire Tshatshi.
 
 ==Voir aussi==
-===Liens internes===
-*[[Liste des communes de Kinshasa]]
+===Mankasa okati Wikipedia===
+*[[Molongo ya ba komini ya Kinshasa]]
 
 ===Liens externes===
 *[http://www.rotarybinza.cd/ Rotary Club de Binza]
