--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -1,6 +1,6 @@
 <div style="float:right">[[image:DCongoKinshasa.png]]</div>
 
-Engumba '''Kinshasa''' - ekoki kotangemene ''Kisásá'' to mpe ''Kínshàsa'' - (oyo eyebenaki kala o nkombo '''[[Leopoldville]]''') ezali '''[[Engumba mokonzi]]''' ya '''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kongo Demokratiki]]''' to mpe '''[[Kɔ́ngɔ-Kinshasa]]'''. Ezali mpe [[etuka|provinsi]] ya ekolo ena. Ezali engumba monene, na milioni 8 ya batu (est.). Elongo na nionso oyo, Kinshasa ezali engumba mibale na bingumba nionso ya mokili, na elobeli [[lifalansé]], na sima ya Engumba '''[[Pari]]''' ([[Falansia]]), mpe ezali okati ya bingumba minene koleka ya [[Afrika]] o sé ya [[Sahara]]. 
+Engumba '''Kinshasa''' - ekoki kotangemene ''Kisásá'' to mpe ''Kíncása'' - (oyo eyebenaki kala o nkombo '''[[Leopoldville]]''') ezali '''[[Engumba mokonzi]]''' ya '''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kongo Demokratiki]]''' to mpe '''[[Kɔ́ngɔ-Kinshasa]]'''. Ezali mpe [[etuka|provinsi]] ya ekolo ena. Ezali engumba monene, na milioni 8 ya batu (est.). Elongo na nionso oyo, Kinshasa ezali engumba mibale na bingumba nionso ya mokili, na elobeli [[lifalansé]], na sima ya Engumba '''[[Pari]]''' ([[Falansia]]), mpe ezali okati ya bingumba minene koleka ya [[Afrika]] o sé ya [[Sahara]]. 
 
 ==Jyografi==
 [[Image:Kinshasa.jpg|thumb|290px|Esika ya bapark ya bulevale ya 30 Yuni, Kinshasa, Kongo, Avrili 2003]]
