ciluba, kikɔ́ngɔ

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -16,7 +16,7 @@
 | [[Lokóta ya Leta]] || [[lifalansé]]
 |-----
 | Nkótá nationales  
-| [[lingála]], [[kiswahili]],<br />[[tshiluba]], [[kikongo]]
+| [[lingála]], [[kiswahili]],<br />[[ciluba]], [[kikɔ́ngɔ]]
 |-----
 | [[Engumba mokonzi]] || [[Kinshasa]]
 |-----
