--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -55,7 +55,7 @@ Mingi se na kati ya bakota bya ekolo bokoyeba etando ya bikela, mabele, banyama 
 
 [[Mongo|Bamongo]] bazali na bakombo mingi ya nzete ya mbila na maye manso basalelaka. Solo, nzete ya mbila eyebani kaka mpona mafuta na masanga te. Eyebani lokola nkisi ekosilisa makono, naye mpe bakosala bitunga mpe bikila kila.
 
-== Historia ==
+== Likambo ==
 ''Ekakoli ya molayi : [[Historia ya Kɔ́ngɔ-Kinshasa]]''
 
 ''Tala mpe: [[Kongó (ntangó ya banɔ́kɔ́)]]''
@@ -125,8 +125,8 @@ Il est à remarquer que, afin de se démarquer de la culture [[colonialisme|colo
 
 Actuellement l'armée française maintient la présence de militaires français dans le cadre de [[MONUC]]. Mais les violences continuent et la guerre aurait fait 3.8 millions de morts (chiffres d'un responsable congolais commentant un rapport de la commission des droits de l'Homme de l'ONU, 2003 : [http://www.un.org/News/fr-press/docs/2003/DHG199.doc.htm])
 
-== Démographie ==
-''Ekakoli ya molayi : [[fr:Démographie de la République démocratique du Congo]]''
+== Bato ==
+''Ekakoli ya molayi : [[:fr:Démographie de la République démocratique du Congo]]''
 
 
 [[Image:Congo dem demographie.png|thumb|650px|center|Évolution de la démographie entre 1961 et 2003 (chiffre de la [[Organisation des Nations Unies pour l'alimentation et l'agriculture|FAO]], 2005). Population en milliers d'habitants.]]
