--- a/Lingála.mw
+++ b/Lingála.mw
@@ -5,8 +5,30 @@
 {{ndámbo}}
 '''Lingála''' ezali [[lokótá]] na bato na [[Kongo]].
 
+=== [[Moleli|Baleli]] ===
+{| border=1 cellspacing=0 cellpadding=2 style="text-align:center; border-collapse:collapse;"
+!
+! style="font-size: x-small;" | [[Moleli na libóso|Libóso]]
+! style="font-size: x-small;" | [[Moleli na nsima|Nsima]]
+|-
+! style="text-align: right;font-size: x-small;" | 
+|style="font-size: larger;"| i
+|style="font-size: larger;"| u
+|-
+! style="text-align: right;font-size: x-small;" | 
+|style="font-size: larger;"| e
+|style="font-size: larger;"| o
+|-
+! style="text-align: right;font-size: x-small;" | 
+|style="font-size: larger;"| &#603;
+|style="font-size: larger;"| &#596;
+|-
+! style="text-align: right;font-size: x-small;" | 
+|style="font-size: larger;"| a
+| &nbsp;
+|}
 
-
+=== [[Molelisi|Balelisi]]
 
 
 == (liens) ==
