--- a/Patrice_Lumumba.mw
+++ b/Patrice_Lumumba.mw
@@ -4,3 +4,16 @@
 
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
 [[Image:Patrice lumumba.jpg|thumb|Patrice E. Lumumba]]
+
+[[bg:Патрис Лумумба]]
+[[de:Patrice E. Lumumba]]
+[[en:Patrice Lumumba]]
+[[et:Patrice Lumumba]]
+[[fr:Patrice Lumumba]]
+[[ja:パトリス・ルムンバ]]
+[[nb:Patrice Lumumba]]
+[[nl:Patrice Lumumba]]
+[[pl:Patrice Lumumba]]
+[[sv:Patrice Lumumba]]
+[[wa:Patrice Lumumba]]
+[[zh:卢蒙巴]]
