--- a/Molɔngɔ́_mwa_komíni_ya_Kinsásá.mw
+++ b/Molɔngɔ́_mwa_komíni_ya_Kinsásá.mw
@@ -1,6 +1,6 @@
-Ekakoli monene : Engumba [[Kinshasa]] o [[Repubiliki ya Kɔ́ngɔ Demokratiki]]
+Ekakoli monɛ́nɛ : Engumbá [[Kinshasa]] o [[Repubiliki ya Kɔ́ngɔ Demokratiki]]
 
-==Ba Komini 24 ya Kinshasa==
+==Bakomini 24 ya Kinshasa==
 
 * [[Bandalungwa]] 
 * [[Barumbu]]
@@ -42,9 +42,9 @@ Ekakoli monene : Engumba [[Kinshasa]] o [[Repubiliki ya Kɔ́ngɔ Demokratiki]]
 
 ==Mankasa olibanda Wikipedia==
 
-*http://www.congonline.com/geo/kinshasa.htm
+* [http://www.congonline.com/geo/kinshasa.htm CongOnline : Villes - Kinshasa] {{fr}}
 
-{{CommunesKinshasa}}
-[[Category:Ba Komini ya Kinshasa|*]]
+{{BakominiKinshasa}}
+[[Category:Bakomini ya Kinshasa|*]]
 [[en:List of municipalities of Kinshasa]]
 [[fr:Liste des communes de Kinshasa]]
