/* Makasa-web olibanda Wikipedia */

--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -93,10 +93,10 @@ Some short examples of the language in the writing system(s) used to write the l
 
 
 
-== Makasa-web olibanda Wikipedia ==
-* Centre de Recherche pour l'Instrumentalisation du Ciluba http://cric.populus.org/
-* [http://www.ethnologue.com/show_language.asp?code=LUB Ethnologue report on Tshiluba]
-* [http://news.bbc.co.uk/2/hi/africa/3830521.stm BBC News: Congo word "most untranslatable"]
+== Mankasa olibanda Wikipedia ==
+* {{fr}} [http://cric.populus.org/ Centre de Recherche pour l'Instrumentalisation du Ciluba]
+* {{en}} [http://www.ethnologue.com/show_language.asp?code=LUB Ethnologue report on Tshiluba]
+* {{en}} [http://news.bbc.co.uk/2/hi/africa/3830521.stm BBC News: Congo word "most untranslatable"]
 
 
 {{nc-lang-stub}}
@@ -115,7 +115,7 @@ Comment améliorer un article sur une langue?
 * sons
 * bibliographie
 
->> voir come exemple: http://en.wikipedia.org/wiki/Lingala_language 
+>> voir come exemple: [[:en:Lingala language|Lingala language]] (lingelesi) mpé [[:fr:Lingala|Lingala]] (lifalansé)
 ----
                                                                                  
 [[Category:Lokótá]]
