--- a/Lingála.mw
+++ b/Lingála.mw
@@ -3,7 +3,7 @@
 [[Image:Lingala-pn.jpg|thumb|texte manquant pour exemple de langue.]]
 [[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]
 {{ndámbo}}
-'''Lingála''' ezali [[lokótá]] na bato na [[Kongo]].
+'''Lingála''' ezali [[lokótá]] na bato na [[Kɔ́ngɔ-Brazzaville]] mpé [[Kɔ́ngɔ-Kinshasa]].
 
 === [[Moleli|Baleli]] ===
 {| border=1 cellspacing=0 cellpadding=2 style="text-align:center; border-collapse:collapse;"
@@ -43,7 +43,7 @@ Comment améliorer un article sur une langue?
 * sons
 * bibliographie
 
->> voir come exemple: http://en.wikipedia.org/wiki/Lingala_language 
+>> ndakisa / voir come exemple: [[:en:Lingala_language|Lingala_language]] mpé [[:fr:Lingala|Lingala]]
 ----
 
 [[Category:Lokótá]]
