+{{InterWiki|code=fr}}

--- a/Falansé.mw
+++ b/Falansé.mw
@@ -2,6 +2,8 @@
 
 '''Lifalansé''' ezali [[lokótá]] na bato ya [[Falansia]]. Elobamí o na eténi ya [[Bɛ́lɛjika]], [[Swisi]], [[Québeki]] na [[Afríka]].
 
+{{InterWiki|code=fr}}
+
 [[Category:Lokótá]]
 
 [[als:Französische Sprache]]
