*Empty MediaWiki Message*

--- a/Kongo.mw
+++ b/Kongo.mw
@@ -1,5 +1,7 @@
-* [[Kɔ́ngɔ-Brazzaville]] (Republiki ya Kongo, ex République populaire du Congo, ex Kongo ya Falansia)
-* [[Kɔ́ngɔ-Kinshasa]] (Republiki ya Kongo Demokratiki, ex Zaïre, ex Kongo belji, ex Ekolo ya Kongo ya Bonsomi)
+[[Image:Congo-Brazzaville-Congo-Kinshasa.png|right]]
+* [[Kɔ́ngɔ-Brazzaville]] (Republiki ya Kongo, yambo République populaire du Congo mpé [[Kɔngɔ ya Falansia]])
+* [[Kɔ́ngɔ-Kinshasa]] (Republiki ya Kongo Demokratiki, yambo [[Zaïre]], [[Kongo belji]] mpé [[Ekolo ya Kɔ́ngɔ ya Bonsɔ́mi]])
 * [[Kɔ́ngɔ (ebale)]]
+* 
 
 {{Bokokani}}
