--- a/Kongo.mw
+++ b/Kongo.mw
@@ -1,7 +1,7 @@
+{{Bokokani}}
+
 [[Image:Congo-Brazzaville-Congo-Kinshasa.png|right]]
 * [[Kɔ́ngɔ-Brazzaville]] (Republiki ya Kongo, yambo République populaire du Congo mpé [[Kɔngɔ ya Falansia]])
-* [[Kɔ́ngɔ-Kinshasa]] (Republiki ya Kongo Demokratiki, yambo [[Zaïre]], [[Kongo belji]] mpé [[Ekolo ya Kɔ́ngɔ ya Bonsɔ́mi]])
+* [[Kɔ́ngɔ-Kinshasa]] (Republiki ya Kongo Demokratiki, yambo [[Zaire]], [[Kongo belji]] mpé [[Ekolo ya Kɔ́ngɔ ya Bonsɔ́mi]])
 * [[Kɔ́ngɔ (ebale)]]
-* 
-
-{{Bokokani}}
+*
