--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -253,7 +253,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 *[[République démocratique du Congo, données chiffrées|Données chiffrées]]
 *[[Forces française hors de la métropole]]
 
-==Tala mpe==
+==Tála mpé==
 {{Commons|Category:Democratic Republic of the Congo|la République démocratique du Congo}}
 * [[Afrika]]
 * [[Santé en République démocratique du Congo]]
@@ -264,7 +264,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * [[Category:Kongo Kinshasa|Kɔ́ngɔ-Kinshasa]]
 <br clear="all"/>
 
-== [[wikipédia:Liens externes|Makasa-Web olibanda Wikipedia]] ==
+== [[wikipédia:Liens externes|Mankásá o libándá]] ==
 {{wikitravel|la République démocratique du Congo|République_démocratique_du_Congo}}
 * [http://www.stiopka.com/congoclic/congoclic.html Carte du Congo (1958)]
 * [http://www.amnestyinternational.be/doc/rubrique44.html Informations d'Amnesty International]
@@ -303,4 +303,3 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 [[sv:Demokratiska republiken Kongo]]
 [[sw:Jamhuri ya Kidemokrasia cha Kongo]]
 [[zh-cn:&#21018;&#26524;&#27665;&#20027;&#20849;&#21644;&#22269;]]
-$
