--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -99,7 +99,7 @@ Some short examples of the language in the writing system(s) used to write the l
 * {{en}} [http://news.bbc.co.uk/2/hi/africa/3830521.stm BBC News: Congo word "most untranslatable"]
 
 
-{{nc-lang-stub}}
+{{nk-ndámbo-lokótá}}
 
 [[Category:Nkotá ya Babantu]]
 [[Category:Nkotá ya Kongo Kinshasa]]
@@ -115,7 +115,7 @@ Comment améliorer un article sur une langue?
 * sons
 * bibliographie
 
->> voir come exemple: [[:en:Lingala language|Lingala language]] (lingelesi) mpé [[:fr:Lingala|Lingala]] (lifalansé)
+>> voir come exemple: [[:en:Lingala language|Lingala language]] (lingɛlɛsi) mpé [[:fr:Lingala|Lingala]] (lifalansé)
 ----
                                                                                  
 [[Category:Lokótá]]
