--- a/Lingála.mw
+++ b/Lingála.mw
@@ -31,9 +31,9 @@
 === [[Molelisi|Balelisi]] ===
 
 
-== (liens) ==
-* http://www.com-nature.com/phorum/list.php3?f=14
-* http://www.congopage.com/phpBB/viewforum.php?f=20
+==Mankásá o libándá==
+* [http://www.com-nature.com/phorum/list.php3?f=14]
+* [http://www.congopage.com/phpBB/viewforum.php?f=20]
 ----
 Comment améliorer un article sur une langue?
 * classification linguistique
