--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -26,7 +26,7 @@
 [[India]] - [[Ingɛlɛ́tɛlɛ]]
 
 === K ===
-[[Kamerun]] - [[Kanada]] - [[Kenya]] - [[Komori]] - [[Kɔ́ngɔ-Brazzaville]] - [[Kɔ́ngɔ-Kinshasa]] - [[Kotdivuar]] (Cote d'ivoire)
+[[Kamerun]] - [[Kanadá]] - [[Kenya]] - [[Komori]] - [[Kɔ́ngɔ-Brazzaville]] - [[Kɔ́ngɔ-Kinshasa]] - [[Kotdivuar]] (Cote d'ivoire)
 
 === L ===
 [[Liberia]] - [[Libîya]] - [[Luksambur]]
