{{Bisé ya Afrika}}

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -278,7 +278,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * [http://www.ucoprdc.org/ Site de l'Unité de coordination du Projet]
 * [http://www.groupelavenir.net/lingala.htm/ L'Avenir - Basango na Lingala]
 <br clear="all"/>
-{{Pays d'Afrique}}
+{Bisé ya Afrika}}
 
 [[bn:&#2453;&#2457;&#2509;&#2455;&#2507; (&#2460;&#2494;&#2479;&#2492;&#2494;&#2480;)]]
 [[da:Demokratiske Republik Congo]]
