--- a/Lingála.mw
+++ b/Lingála.mw
@@ -32,8 +32,8 @@
 
 
 ==Mankásá o libándá==
-* [http://www.com-nature.com/phorum/list.php3?f=14]
-* [http://www.congopage.com/phpBB/viewforum.php?f=20]
+* {{fr}} [http://www.com-nature.com/phorum/list.php3?f=14 Archive du Forum Congopage : Le Lingala]
+* {{fr}} [http://www.congopage.com/phpBB/viewforum.php?f=20 Congopage - Forum : Le Lingala]
 ----
 Comment améliorer un article sur une langue?
 * classification linguistique
