--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -186,6 +186,9 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 == Politiki ==
 ''Ekakoli ya molayi : [[Politiki bya Kongo Kinshasa]]''
 
+'''Mama-mobéko''' :
+* {{fr}} [[wikisource:Constitution de la République démocratique du Congo|Mama-mobéko]]
+
 '''Bakambi Ekolo''' :
 * [[1960]] - [[1965]] [[Joseph Kasavubu]]
 * [[1965]] - [[1997]] [[Mobutu Sese Seko]]
