--- a/Bas-Congo.mw
+++ b/Bas-Congo.mw
@@ -1,3 +1,12 @@
+==Tala mpe==
+===Mankasa okati Wikipedia===
+* [[Molongo ya bingumba ya Bas-Congo]]
+
+===Mankasa olibanda Wikipedia===
+* [http://www.bas-congo.org/ Bulamatari ya Bas-Congo]
+* [http://katembo.fragland.net/gallery/cartes/bascongo1.jpg Karta ya Weste ya Bas-Congo] (na lifalansé)
+* [http://katembo.fragland.net/gallery/cartes/bascongo2.jpg Carte ya Este ya Bas-Congo] (na lifalansé)
+
 {{BiteniKongoKinshasa}}
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
