--- a/Kasai_ya_Monyɛlɛ.mw
+++ b/Kasai_ya_Monyɛlɛ.mw
@@ -1,3 +1,16 @@
+
+<div style="float:right">[[image:DCongoEastKasai.png]]</div>
+
+'''Kasai-Oriental''' ('''Kasai ya Este''') ezali etuka ya '''[[Kɔ́ngɔ-KInshasa]]'''. Engumba-mokonzi na yanago ezali [[Mbuji-Mayi]].  Ekangami na Kasai ya Weste to mpe [[Kasai-Occidental]] na Weste, [[Ekwatéli (etuka)|Ekwatéli]] na Nor-Weste, [[Orientale]] na Nor-Este, [[Maniema]] na Este, mpe [[Katanga]] na Sud.
+
+{{ndambo}}
+[[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
+
+[[sv:Kasai-Oriental]]
+[[fr:Kasai-Oriental]]
+[[en:Kasai-Oriental]]
+[[es:Kasai-Oriental]]
+
 {{BiteniKongoKinshasa}}
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
