*Empty MediaWiki Message*

--- a/Kasai_ya_Monyɛlɛ.mw
+++ b/Kasai_ya_Monyɛlɛ.mw
@@ -1,7 +1,6 @@
-
 <div style="float:right">[[image:DCongoEastKasai.png]]</div>
 
-'''Kasai-Oriental''' ('''Kasai ya Este''') ezali etuka ya '''[[Kɔ́ngɔ-KInshasa]]'''. Engumba-mokonzi na yanago ezali [[Mbuji-Mayi]].  Ekangami na Kasai ya Weste to mpe [[Kasai-Occidental]] na Weste, [[Ekwatéli (etuka)|Ekwatéli]] na Nor-Weste, [[Orientale]] na Nor-Este, [[Maniema]] na Este, mpe [[Katanga]] na Sud.
+'''Kasai-Oriental''' ('''Kasai ya Este''') ezali etuka ya '''[[Kɔ́ngɔ-Kinshasa]]'''. Engumba-mokonzi na yanago ezali [[Mbuji-Mayi]].  Ekangami na Kasai ya Weste to mpe [[Kasai-Occidental]] na Weste, [[Ekwatéli (etuka)|Ekwatéli]] na Nor-Weste, [[Orientale]] na Nor-Este, [[Maniema]] na Este, mpe [[Katanga]] na Sud.
 
 {{ndambo}}
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
