--- a/Ekwatéli_(Kongó-Kinsásá).mw
+++ b/Ekwatéli_(Kongó-Kinsásá).mw
@@ -1,4 +1,4 @@
-
+<div style="float:right">[[image:DCongoEquator.png]]</div>
 '''Ekwatéli''' ezali [[etuka]] ya ekolo [[Kɔ́ngɔ-Kinshasa]]. Ekutanemi na Nor ya ekolo ena, mpe ekangami na [[Kɔ́ngɔ-Brazzaville]] na Weste, [[Santrafrika]] na Nor, etuka [[Orientale]] na Este, elongo na bituka [[Kasai-Oriental]], [[Kasai-Occidental]], na [[Bandundu]] na Sud.  Engumba-mokonzi ya etuka Ekwatéli ezali [[Mbandaka]], engumba mɔkɔ o pene ya ebale [[Kongo]].
 
 {{ndambo}}
