*Empty MediaWiki Message*

--- a/Bas-Congo.mw
+++ b/Bas-Congo.mw
@@ -1,3 +1,9 @@
+<div style="float:right">[[image:DcongoBasCongo.png]]</div>
+{{ndambo}}
+'''Bas-Congo''' ezali etuka se moko ya [[Kɔ́ngɔ-Kinshasa]] oyo ekangami na mayi-mozindo [[Atalantiki]]. Engumba-mokonzi ya Bas-Congo ezali [[Matadi]]. Ekangami mpe na bikolo ya [[Angola]] na [[Kɔ́ngɔ-Brazzaville]], mpe na etuka Bandundu, elongo na engumbá-etuka ya Kinshasa.
+
+Okati wa Bas-Congo, makútání bingumba mingi lokola [[Boma]], [[Moanda]], [[Banana]] and [[Kisantu]].
+
 ==Tala mpe==
 ===Mankasa okati Wikipedia===
 * [[Molongo ya bingumba ya Bas-Congo]]
