*Empty MediaWiki Message*

--- a/Molɔngɔ́_mwa_bingumba_bya_Bas-Congo.mw
+++ b/Molɔngɔ́_mwa_bingumba_bya_Bas-Congo.mw
@@ -17,7 +17,7 @@ Ekakoli molayi : Etuka [[Bas-Congo]] okati ya [[Kɔ́ngɔ-Kinshasa]]
 * [[Kwimba]]    
 * [[Lukula]]  
 * [[Luozi]]
-* [[Matadi]] (capitale provinciale)
+* [[Matadi]] (engumba mokonzi ya etuka)
 * [[Mangembo]] 
 * [[Mbanza-Ngungu]]   
 * [[Moanda]]
