--- a/Molɔngɔ́_mwa_bingumba_bya_Bas-Congo.mw
+++ b/Molɔngɔ́_mwa_bingumba_bya_Bas-Congo.mw
@@ -1,4 +1,4 @@
-Ekakoli molayi : Etuka [[Bas-Congo]] okati ya [[Kɔ́ngɔ-Kinshasa]]
+''Ekakoli molayi : Etuka [[Bas-Congo]] okati ya [[Kɔ́ngɔ-Kinshasa]]''
 
 * [[Banana]]
 * [[Banza]] 
