*Empty MediaWiki Message*

--- a/Molɔngɔ́_mwa_bingumba_bya_Bas-Congo.mw
+++ b/Molɔngɔ́_mwa_bingumba_bya_Bas-Congo.mw
@@ -28,3 +28,5 @@
 
 ==Mankasa olibanda Wikipedia==
 * http://www.minisanterdc.cd/inspectiondistrictetzonedesante/bascongo.htm
+{{ndambo}}
+[[fr:Liste des villes du Bas-Congo]]
