--- a/Bas-Congo.mw
+++ b/Bas-Congo.mw
@@ -1,4 +1,6 @@
-<div style="float:right">[[image:DcongoBasCongo.png]]</div>
+<div style="float:right">[[image:DcongoBasCongo.PNG]]</div>
+[[Image:Bas-congo.jpg|thumb|290px|Landscape of Bas-Congo]]
+
 {{ndambo}}
 '''Bas-Congo''' ezali etuka se moko ya [[Kɔ́ngɔ-Kinshasa]] oyo ekangami na mayi-mozindo [[Atalantiki]]. Engumba-mokonzi ya Bas-Congo ezali [[Matadi]]. Ekangami mpe na bikolo ya [[Angola]] na [[Kɔ́ngɔ-Brazzaville]], mpe na etuka Bandundu, elongo na engumbá-etuka ya Kinshasa.
 
