*Empty MediaWiki Message*

--- a/Matádi.mw
+++ b/Matádi.mw
@@ -17,6 +17,7 @@ Un pont haubanné de 722 mètres de long construit en 1983, dénommé Pont Matad
 En amont de la ville peut être observé le rocher de [[Diégo Caô]], où le célèbre explorateur portugais sculpta, en [[1482]], la marque du point limite de sa remontée du fleuve. 
 
 [[Category:Bingumba ya Bas-Congo]]
+[[category:Kɔ́ngɔ-Kinshasa]]
 [[en:Matadi]]
 [[es:Matadi]]
 [[fr:Matadi]]
