*Empty MediaWiki Message*

--- a/Bas-Congo.mw
+++ b/Bas-Congo.mw
@@ -18,3 +18,5 @@ Okati wa Bas-Congo, makútání bingumba mingi lokola [[Boma]], [[Moanda]], [[Ba
 {{ndambo}}
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
+[[en:Bas-Congo]]
+[[fr:Bas-Congo]]
