*Empty MediaWiki Message*

--- a/Bas-Congo.mw
+++ b/Bas-Congo.mw
@@ -1,5 +1,5 @@
 <div style="float:right">[[image:DcongoBasCongo.PNG]]</div>
-[[Image:Bas-congo.JPG|thumb|290px|Landscape of Bas-Congo]]
+[[Image:Bas-congo.JPG|thumb|290px|Kitoko ya zamba ya Bas-Congo]]
 
 '''Bas-Congo''' ezali etuka se moko ya [[Kɔ́ngɔ-Kinshasa]] oyo ekangami na mayi-mozindo [[Atalantiki]]. Engumba-mokonzi ya Bas-Congo ezali [[Matadi]]. Ekangami mpe na bikolo ya [[Angola]] na [[Kɔ́ngɔ-Brazzaville]], mpe na etuka Bandundu, elongo na engumbá-etuka ya Kinshasa.
 
