*Empty MediaWiki Message*

--- a/Joseph_Kasa-Vubu.mw
+++ b/Joseph_Kasa-Vubu.mw
@@ -4,3 +4,5 @@
 
 Mokambi Ekolo 01 07 1960 - 24 11 1965
 (Mokambi Bulamatari naye azalaki [[Patrice Lumumba]])
+[[en:Joseph Kasavubu]]
+[[fr:Joseph Kasavubu]]
