--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -1,5 +1,5 @@
 [[af:Verenigde Koninkryk]] [[ar:مملكة متحدة]] [[bg:Обединено кралство]] [[br:Rouantelezh Unanet]] [[ca:Regne Unit de la Gran Bretanya i Irlanda del Nord]] [[cs:Velká Británie]] [[cy:Y Deyrnas Unedig]] [[da:Det Forenede Kongerige]] [[de:Großbritannien und Nordirland]] [[et:Suurbritannia]] [[el:Ηνωμένο Βασίλειο]] [[en:United Kingdom]] [[es:Reino Unido]] [[eo:Unuigita Reĝlando de Britio kaj Nord-Irlando]] [[ga:An Ríocht Aontaithe]] [[gl:Reino Unido]] [[ko:영국]] [[id:Britania Raya]] [[ia:Regno Unite]] [[it:Regno Unito]] [[he:הממלכה המאוחדת]] [[la:Regnum Unitum]] [[lt:Jungtinė Karalystė]] [[ms:United Kingdom]] [[nl:Verenigd Koninkrijk]] [[ja:イギリス]] [[no:Storbritannia]] [[oc:Reialme Unit]] [[nds:Groot Britannien]] [[pl:Wielka Brytania]] [[pt:Reino Unido]] [[ro:Regatul Unit]] [[rm:Reginavel Unì da la Gronda Britannia ed Irlanda dal Nord]] [[ru:Великобритания]] [[simple:United Kingdom]] [[sl:Združeno kraljestvo]] [[fi:Yhdistynyt kuningaskunta]] [[sv:Storbritannien]][[tl:Nagkakaisang Kaharian]] [[ur:برطانیہ]] [[vi:Liên hiệp Vương quốc Anh và Bắc Ai-len]] [[zh-cn:英国]] [[zh-tw:英國]] [[zh-min-nan:Li&#226;n-ha&#781;p &#212;ng-kok]]
-{{voir homonymes}}
+{{bokokani}}
 
 Le '''Royaume-Uni de Grande-Bretagne et d'Irlande du Nord''' est un État indépendant d'[[Europe]] composé de la [[Grande-Bretagne]] ([[Angleterre]], [[Écosse]], [[Pays de Galles]]), de l'[[Irlande du Nord]] ainsi que de territoires d'outre-mer. Souvent appelé de façon simplifiée '''Royaume-Uni''', la plupart de son territoire est situé à proximité de la côte nord-ouest de l'Europe continentale et est entouré par la [[mer du Nord]], la [[Manche (mer)|Manche]] et l'[[océan Atlantique]].
 
