/* Makasa-web olibanda Wikipedia */

--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -25,15 +25,14 @@ Kinshasa suffered greatly due to Mobutu's excesses, mass corruption, nepotism an
 Kinshasa is home to a large number of radio and TV stations. The National TV is housed in the city. Its 2 channels reach more or less the entire country. In additional to these stations, there are nearly a dozen terrestrial stations reaching the environs of the city, and sometimes a bit beyond.
 
 == Makasa-web olibanda Wikipedia ==
-*[http://www.boxing-memorabilia.com/aliforeman2.htm Rumble In The Jungle - Muhammad Ali Kinshasa, 1974]
-*[http://www.monuc.org/downloads/KINSHASA_IKONOS_SKETCH100.pdf Carte détaillée de Kinshasa]
-*[http://www.lib.utexas.edu/maps/world_cities/kinshasa_2001.jpg Carte de la ville de Kinshasa] (2001)
-*[http://www.katembo.be/cartes/PlanLeoC.jpg Carte de Léopoldville] (1960)
-*[http://www.katembo.be/cartes/carte_leopoldville_1954.jpg Carte de Léopoldville] (1954)
-*[http://www.katembo.be/leopoldville1956.htm Photos de Léopoldville]
-*[http://www.katembo.be/Kin2005/index.htm Photos de Kinshasa 2005]
-*[http://www.stiopka.com/Leo/photos_leo.html Photos de Kinshasa / Léopoldville]
-
+*{{en icon}} [http://www.boxing-memorabilia.com/aliforeman2.htm Rumble In The Jungle - Muhammad Ali Kinshasa, 1974]
+*{{fr icon}} [http://www.monuc.org/downloads/KINSHASA_IKONOS_SKETCH100.pdf Carte détaillée de Kinshasa]
+*{{fr icon}} [http://www.lib.utexas.edu/maps/world_cities/kinshasa_2001.jpg Carte de la ville de Kinshasa] (2001)
+*{{fr icon}} [http://www.katembo.be/cartes/PlanLeoC.jpg Carte de Léopoldville] (1960)
+*{{fr icon}} [http://www.katembo.be/cartes/carte_leopoldville_1954.jpg Carte de Léopoldville] (1954)
+*{{fr icon}} [http://www.katembo.be/leopoldville1956.htm Photos de Léopoldville]
+*{{fr icon}} [http://www.katembo.be/Kin2005/index.htm Photos de Kinshasa 2005]
+*{{fr icon}} [http://www.stiopka.com/Leo/photos_leo.html Photos de Kinshasa / Léopoldville]
 
 ==Tala mpe==
 *[[Repubiliki ya Kɔ́ngɔ Demokratiki]]
