--- a/Maluku_(Kinsásá).mw
+++ b/Maluku_(Kinsásá).mw
@@ -12,3 +12,5 @@
 *[http://www.lib.utexas.edu/maps/world_cities/kinshasa_2001.jpg Carte de la ville de Kinshasa] 
 
 [[Category:Ba komini ya Kinshasa]]
+
+[[fr:Maluku (Congo)]]
