--- a/Ngaliéma.mw
+++ b/Ngaliéma.mw
@@ -18,3 +18,4 @@ La commune accueille par ailleurs le [[palais de Marbre]], ancienne résidence p
 *[http://katembo.fragland.net/gallery/cartes/PlanLeoC.jpg Carte de Léopoldville] (1960)
 *[http://home.scarlet.be/~godfr123/cartes/carte_leopoldville_1954.jpg Carte de Léopoldville] (1954)
 {{CommunesKinshasa}}
+[[fr:Ngaliema]]
